sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:3: error: ';' expected but ',' found.
	var debut=0,; var fin = getNombreValeurs()-2;
                   ^